Fixed an issue where headlines would get cut off on the login screens.

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Login.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Login.css
@@ -34,6 +34,10 @@
     overflow: hidden;
 }
 
+#Slider h2 {
+    margin-top: 2px;
+}
+
 #Login,
 #Reset,
 #Signup,
